--- a/FYP/FYP/Views/Shared/SuperUserLayout.cshtml
+++ b/FYP/FYP/Views/Shared/SuperUserLayout.cshtml
@@ -5,11 +5,23 @@
     <title>@ViewBag.Title</title>
     <script src="~/Scripts/jquery-1.9.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/jquery.validation/1.15.1/jquery.validate.min.js"></script>
-   @* <script src="~/Scripts/jquery.validate.min.js"></script>*@
-    @*<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>*@
     <link href="~/Content/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="~/Content/css/bootstrap-multiselect.css" rel="stylesheet" />
     <script src="~/Content/js/bootstrap.min.js"></script>
-    @*<link href="~/Content/RemoteValidator.css" rel="stylesheet" />*@
+    <script src="~/Scripts/bootstrap-multiselect.js"></script>
+
+    <style>
+        .submit-btn {
+            width: 100%;
+        }
+
+        form .error {
+            color: red;
+        }
+        .multiselect-container {
+            width: 100% !important;
+        }
+    </style>
 
 </head>
 <body>
