--- a/FYP/FYP/Views/SuperUser/EditSubject.cshtml
+++ b/FYP/FYP/Views/SuperUser/EditSubject.cshtml
@@ -16,18 +16,68 @@
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
                 <div class="panel panel-primary">
-                    <div class="panel-heading"><center><b>Edit @ViewBag.User_Id's Subject</b></center></div>
+                    <div class="panel-heading"><center><b>Edit Subject</b></center></div>
                     <div class="panel-body">
 
-                        @using (Html.BeginForm())
-                        {
+                        <form action="/SuperUser/EditSubject" method="post">
 
-                            @Html.Label("Enter Subject Name:")
-                            @Html.TextBoxFor(model => model.Subject_Name, new { @class = "form-control", @placeholder = "Example: English" })
-                            @Html.ValidationMessageFor(a => a.Subject_Name)<br>
+                            <label>Subject Id</label>
+                            <input type="text" id="Subject_Id" name="Subject_Id" value="@Model.Subject_Id" readonly class="form-control" /><br>
 
-                            <input type="submit" class="btn btn-primary submit-btn" value="Save Changes"/>
-                        }
+                            <label>Subject Name</label>
+                            <input type="text" name="Subject_Name" value="@Model.Subject_Name" class="form-control" /><br>
+
+                            <label>Teacher</label>
+                            <select id="User_Id" name="User_Id" class="form-control">
+                                <option value="@Model.User_Id" selected>@Model.User_Id</option>    
+                            </select><br>
+
+                            <label>Batch</label>
+                            <select id="Batch_Id" name="Batch_Id" class="form-control">
+                                <option value="@Model.Batch_Id" selected>@Model.Batch_Id</option>
+                            </select><br>
+
+                            <label>Section</label>
+                            <select id="Section" name="Section" multiple="multiple" class="form-control">
+                                <option value="a">A</option>
+                                <option value="b">B</option>
+                                <option value="c">C</option>
+                                <option value="d">D</option>
+                                <option value="e">E</option>
+                                <option value="f">F</option>
+                                <option value="g">G</option>
+                                <option value="h">H</option>
+                                <option value="i">I</option>
+                                <option value="j">J</option>
+                                <option value="k">K</option>
+                                <option value="l">L</option>
+                                <option value="m">M</option>
+                                <option value="n">N</option>
+                                <option value="o">O</option>
+                                <option value="p">P</option>
+                                <option value="q">Q</option>
+                                <option value="r">R</option>
+                                <option value="s">S</option>
+                                <option value="t">T</option>
+                                <option value="u">U</option>
+                                <option value="v">V</option>
+                                <option value="w">W</option>
+                                <option value="x">X</option>
+                                <option value="y">Y</option>
+                                <option value="z">Z</option>
+                            </select>
+                            <label id="Section-error" class="error" for="Section"></label><br><br>
+
+                            <label>Status</label>
+                            <center>
+                                <input type="radio" name="Status" value="Active" checked />
+                                <label>Active</label>
+                                <input type="radio" name="Status" value="Inactive" />
+                                <label>Inctive</label>
+                            </center>
+
+                            <input type="submit" class="btn btn-primary submit-btn" value="Add" />
+                        </form>
                     </div>
                 </div>
                 <center><a href="/SuperUser/ManageSubject">Go Back</a></center>
@@ -36,3 +86,84 @@
         </div>
     </div>
 </body>
+
+<script>
+    $(function () {
+
+        $(document).ready(function () {
+
+            $("#Section").multiselect({
+                includeSelectAllOption: true,
+                buttonWidth: '100%'
+            });
+            $(".caret").css('float', 'right');
+            $(".caret").css('margin', '8px 0');
+
+            $.ajax({
+                type: "POST",
+                url: "/SuperUser/AjaxMethodForGettingTeachers",
+                contentType: "application/json; charset=utf-8",
+                dataType: "json",
+                success: function (response) {
+                    len = response.length;
+                    if (len == 0) {
+                        $("#User_Id").html('<option disabled selected>--There are no teachers in Database--</option>');
+                    }
+                    else {
+                        for (var i = 0; i < len; i++) {
+                            $("#User_Id").append(new Option("Teacher Id: " + response[i].User_Id + ", Teacher Name: " + response[i].First_Name + " " + response[i].Last_Name  , response[i].User_Id));
+                        }
+                    }
+                },
+                error: function (response) {
+                    $("#dep").html('<option disabled selected>--There are no teachers in Database--</option>');
+                }
+            });
+
+            $.ajax({
+                type: "POST",
+                url: "/SuperUser/AjaxMethodForBatch",
+                contentType: "application/json; charset=utf-8",
+                dataType: "json",
+                success: function (response) {
+                    len = response.length;
+                    if (len == 0) {
+                        $("#Batch_Id").html('<option disabled selected>--There are no batches in Database--</option>');
+                    }
+                    else {
+                        for (var i = 0; i < len; i++) {
+                            $("#Batch_Id").append(new Option(response[i].Batch_Id, response[i].Batch_Id));
+                        }
+                    }
+                },
+                error: function (response) {
+                    $("#dep").html('<option disabled selected>--There are no teachers in Database--</option>');
+                }
+            });
+        });
+
+
+        $("form").validate({
+
+            rules: {
+                Subject_Name: "required",
+                User_Id: "required",
+                Batch_Id: "required",
+                Section: "required",
+            },
+
+            messages: {
+
+                Subject_Name: "Please enter subject name !",
+                User_Id: "Please select a teacher !",
+                Batch_Id: "Please select a batch !",
+                Section: "Please select minimum one section !",
+            },
+            submit: function (form) {
+                form.submit();
+            }
+        });
+
+
+    });
+</script>
