--- a/FYP/FYP/Views/SuperUser/AddStudent.cshtml
+++ b/FYP/FYP/Views/SuperUser/AddStudent.cshtml
@@ -18,49 +18,63 @@
                     <div class="panel-heading"><center><b>Create An Account For Student</b></center></div>
                     <div class="panel-body">
 
-                        
+                        <form action="/SuperUser/AddStudent" method="post">
 
-                        @using (Html.BeginForm())
-                        {
+                            <label>Id</label>
+                            <input type="text" name="User_Id" class="form-control" placeholder="Example: johnsmith@gmail.com"/><br>
 
-                            @Html.Label("Id")
-                            @Html.TextBoxFor(a => a.User_Id, new { @class = "form-control", @placeholder = "Example: john.smith@gmail.com" })
-                            @Html.ValidationMessageFor(a => a.User_Id)<br>
+                            <label>First Name</label>
+                            <input type="text" name="First_Name" class="form-control" placeholder="Example: john" /><br>
 
-                            @Html.Label("First Name")
-                            @Html.TextBoxFor(a => a.First_Name, new { @class = "form-control", @placeholder = "Example: John" })
-                            @Html.ValidationMessageFor(a => a.First_Name)<br>
+                            <label>Last Name</label>
+                            <input type="text" name="Last_Name" class="form-control" placeholder="Example: smith" /><br>
 
-                            @Html.Label("Last Name")
-                            @Html.TextBoxFor(a => a.Last_Name, new { @class = "form-control", @placeholder = "Example: Smith" })
-                            @Html.ValidationMessageFor(a => a.Last_Name)<br>
+                            <label>Password</label>
+                            <input type="password" name="Password" class="form-control"/><br>
 
-                            @Html.Label("Password")
-                            @Html.PasswordFor(a => a.Password, new { @class = "form-control" })
-                            @Html.ValidationMessageFor(a => a.Password)<br>
+                            <label>Contact Number</label>
+                            <input type="text" name="Contact_No" class="form-control" placeholder="Example: 0300*******" /><br>
 
-                            @Html.Label("Contact Number")
-                            @Html.TextBoxFor(a => a.Contact_No, new { @class = "form-control", @placeholder = "Example: 0300*******" })
-                            @Html.ValidationMessageFor(a => a.Contact_No)<br>
+                            <label>Department</label>
+                            <select name="Department_Id" id="Department_Id" class="form-control"></select><br>
 
-                            @Html.Label("Department")
-                            @Html.DropDownListFor(a => a.Department_Id, (IEnumerable<SelectListItem>)ViewBag.d, "-Select a Department-", new { @class = "form-control"})
-                            @Html.ValidationMessageFor(a => a.Department_Id) <br>
-                            
-                            @Html.Label("Batch")
-                            @Html.DropDownListFor(a => a.Batch_Id, (IEnumerable<SelectListItem>)ViewBag.s, "-Select batch-", new { @class = "form-control"})
-                            @Html.ValidationMessageFor(a => a.Batch_Id) <br> 
-                                                       
-                            @Html.Label("Status:")
-                            <center>
-                                @Html.RadioButtonFor(a => a.Status, "Active", new { @checked = "checked" })
-                                @Html.Label("Active") &nbsp;&nbsp;&nbsp;&nbsp;
-                                @Html.RadioButtonFor(a => a.Status, "Inactive")
-                                @Html.Label("Inactive")
-                            </center>
+                            <label>Batch</label>
+                            <select name="Batch_Id" id="Batch_Id" class="form-control"></select><br>
+
+                            <label>Section</label>
+                            <select id="Section" name="Section" class="form-control">
+                                <option selected disabled>--Select a Section--</option>
+                                <option value="a">A</option>
+                                <option value="b">B</option>
+                                <option value="c">C</option>
+                                <option value="d">D</option>
+                                <option value="e">E</option>
+                                <option value="f">F</option>
+                                <option value="g">G</option>
+                                <option value="h">H</option>
+                                <option value="i">I</option>
+                                <option value="j">J</option>
+                                <option value="k">K</option>
+                                <option value="l">L</option>
+                                <option value="m">M</option>
+                                <option value="n">N</option>
+                                <option value="o">O</option>
+                                <option value="p">P</option>
+                                <option value="q">Q</option>
+                                <option value="r">R</option>
+                                <option value="s">S</option>
+                                <option value="t">T</option>
+                                <option value="u">U</option>
+                                <option value="v">V</option>
+                                <option value="w">W</option>
+                                <option value="x">X</option>
+                                <option value="y">Y</option>
+                                <option value="z">Z</option>
+                            </select>
+                            <label id="Section-error" class="error" for="Section"></label><br><br>
 
                             <input type="submit" class="btn btn-primary submit-btn" value="Register">
-                        }
+                        </form>
                     </div>
                 </div>
                 <center><a href="/SuperUser/ManageStudent">Go Back</a></center>
@@ -69,3 +83,98 @@
     </div>
 </body>
 
+<script>
+    $(function () {
+
+        $("form").validate({
+            rules: {
+                First_Name: "required",
+                Last_Name: "required",
+                Password: "required",
+                Contact_No: "required",
+                Department_Id: "required",
+                Batch_Id: "required",
+                Section: "required",
+
+                User_Id: {
+                    required: true,
+                    remote: {
+                        url: "/SuperUser/IsUser_IdAvailable",
+                        type: "post",
+                        data: {
+                            function() { return $("#User_Id").val(); },
+                        },
+                    },
+                },
+            },
+            messages: {
+                First_Name: "Please enter first name !",
+                Last_Name: "Please enter last name !",
+                Password: "Please enter password !",
+                Contact_No: "Please enter contact number !",
+                Department_Id: "Please select a department !",
+                Batch_Id: "Please select a batch !",
+                Section: "Please select a section !",
+
+                User_Id: {
+                    required: "Please enter user id !",
+                    remote: "User id already exists !"
+                },
+
+            },
+            submit: function (form) {
+                form.submit();
+            }
+        });
+
+
+        $(document).ready(function () {
+            $.ajax({
+                type: "POST",
+                url: "/SuperUser/AjaxMethodForDepartment",
+                contentType: "application/json; charset=utf-8",
+                dataType: "json",
+                success: function (response) {
+                    len = response.length;
+                    if (len == 0) {
+                        $("#Department_Id").html('<option disabled selected>--There are no Departments in DB-</option>');
+                    }
+                    else {
+                        $("#Department_Id").html('<option disabled selected>--Select a Department--</option>');
+                        for (var i = 0; i < len; i++) {
+                            $("#Department_Id").append(new Option(response[i].Department_Id, response[i].Department_Id));
+                        }
+                    }
+                },
+                error: function (response) {
+                    $("#Department_Id").html('<option disabled selected>--There are no Departments in DB--</option>');
+                }
+            });
+        });
+
+        $(document).ready(function () {
+            $.ajax({
+                type: "POST",
+                url: "/SuperUser/AjaxMethodForBatch",
+                contentType: "application/json; charset=utf-8",
+                dataType: "json",
+                success: function (response) {
+                    len = response.length;
+                    if (len == 0) {
+                        $("#Batch_Id").html('<option disabled selected>--There are no batches in DB-</option>');
+                    }
+                    else {
+                        $("#Batch_Id").html('<option disabled selected>--Select a Select--</option>');
+                        for (var i = 0; i < len; i++) {
+                            $("#Batch_Id").append(new Option(response[i].Batch_Id, response[i].Batch_Id));
+                        }
+                    }
+                },
+                error: function (response) {
+                    $("#Batch_Id").html('<option disabled selected>--There are no batches in DB--</option>');
+                }
+            });
+        });
+
+    });
+</script>
