--- a/FYP/FYP/Views/SuperUser/EditStudent.cshtml
+++ b/FYP/FYP/Views/SuperUser/EditStudent.cshtml
@@ -17,40 +17,43 @@
                     <div class="panel-heading"><center><b>Edit @Model.User_Id's Account</b></center></div>
                     <div class="panel-body">
 
-                        @using (Html.BeginForm())
-                        {
+                        <form action="/SuperUser/EditStudent" method="post">
 
-                            @Html.Label("First Name:")<br>
-                            @Html.TextBoxFor(model => model.First_Name, new { @class = "form-control" })
-                            @Html.ValidationMessageFor(model => model.First_Name)<br>
+                            <input type="text" name="User_Id" value="@Model.User_Id" hidden/><br>
 
-                            @Html.Label("Last Name:")<br>
-                            @Html.TextBoxFor(model => model.Last_Name, new { @class = "form-control" })
-                            @Html.ValidationMessageFor(model => model.Last_Name)<br>
+                            <label>First Name</label>
+                            <input type="text" name="First_Name" value="@Model.First_Name" class="form-control" /><br>
 
-                            @Html.Label("Password:")<br>
-                            @Html.TextBoxFor(model => model.Password, new { @class = "form-control", @type = "Password" })
-                            @Html.ValidationMessageFor(model => model.Password) <br>
+                            <label>Last Name</label>
+                            <input type="text" name="Last_Name" value="@Model.Last_Name" class="form-control" /><br>
 
-                            @Html.Label("Contact Number:")<br>
-                            @Html.TextBoxFor(model => model.Contact_No, new { @class = "form-control" })
-                            @Html.ValidationMessageFor(model => model.Contact_No)<br>
+                            <label>Password</label>
+                            <input type="password" name="Password" value="@Model.Password" class="form-control" /><br>
 
-                            @Html.Label("Role:")<br>
-                            @Html.DropDownListFor(model => model.Role, (IEnumerable<SelectListItem>)ViewBag.RoleList, new { @class = "form-control" })
-                            @Html.ValidationMessageFor(model => model.Role)<br>
+                            <label>Contact</label>
+                            <input type="text" name="Contact_No" value="@Model.Contact_No" class="form-control" /><br>
 
-                            @Html.Label("Department")
-                            @Html.DropDownListFor(a => a.Department_Id, (IEnumerable<SelectListItem>)ViewBag.d, "-Select a Department-", new { @class = "form-control"})
-                            @Html.ValidationMessageFor(a => a.Department_Id) <br>
-                            
-                            @Html.Label("batch")
-                            @Html.DropDownListFor(a => a.Batch_Id, (IEnumerable<SelectListItem>)ViewBag.s, "-Select batch-", new { @class = "form-control"})
-                            @Html.ValidationMessageFor(a => a.Batch_Id) <br> 
+                            <label>Department</label>
+                            <select name="Department_Id" id="Department_Id" class="form-control">
+                                <option disabled>--Select a Department--</option>
+                                <option value="@Model.Department_Id" selected>@Model.Department_Id</option>    
+                            </select><br>
 
-                            
-                            <input type="submit" class="btn btn-primary submit-btn" value="Save Changes">
-                        }
+                            <label>Batch</label>
+                            <select name="Batch_Id" id="Batch_Id" class="form-control">
+                                <option disabled>--Select a Batch--</option>
+                                <option value="@Model.Batch_Id" selected>@Model.Batch_Id</option>
+                            </select><br>
+
+                            <label>Section</label>
+                            <select name="Section" id="Section" class="form-control">
+                                <option disabled>--Select a Section--</option>
+                                <option value="@Model.Section">@Model.Section</option>
+                            </select>
+
+                            <input type="submit" class="btn btn-primary submit-btn" value="Save" />
+                        </form>
+
                     </div>
                 </div>
                 <center><a href="/SuperUser/ManageStudent">Go Back</a></center>
@@ -59,7 +62,103 @@
     </div>
 </body>
 
+<script>
+    $(function () {
 
+        $("form").validate({
+            rules: {
+                First_Name: "required",
+                Last_Name: "required",
+                Password: "required",
+                Contact_No: "required",
+                Department_Id: "required",
+                Batch_Id: "required",
+                Section: "required",
+            },
+            messages: {
+                First_Name: "Please enter first name !",
+                Last_Name: "Please enter last name !",
+                Password: "Please enter password !",
+                Contact_No: "Please enter contact number !",
+                Department_Id: "Please select a department !",
+                Batch_Id: "Please select a batch !",
+                Section: "Please select a section !",
+            },
+            submit: function (form) {
+                form.submit();
+            }
+        });
+
+
+        $(document).ready(function () {
+            var dep = $("#Department_Id").val();
+            var btch = $("#Batch_Id").val();
+            var sec = $("#Section").val();
+
+            $.ajax({
+                type: "POST",
+                url: "/SuperUser/AjaxMethodForDepartment",
+                contentType: "application/json; charset=utf-8",
+                dataType: "json",
+                success: function (response) {
+                    len = response.length;
+                    if (len == 0) {
+                        $("#Department_Id").html('<option disabled selected>--There are no Departments in DB-</option>');
+                    }
+                    else {
+                        for (var i = 0; i < len; i++) {
+                            if (!(dep == response[i].Department_Id))
+                                $("#Department_Id").append(new Option(response[i].Department_Id, response[i].Department_Id));
+                        }
+                    }
+                },
+                error: function (response) {
+                    $("#Department_Id").html('<option disabled selected>--There are no Departments in DB--</option>');
+                }
+            });
+        
+            $.ajax({
+                type: "POST",
+                url: "/SuperUser/AjaxMethodForBatch",
+                contentType: "application/json; charset=utf-8",
+                dataType: "json",
+                success: function (response) {
+                    len = response.length;
+                    if (len == 0) {
+                        $("#Batch_Id").html('<option disabled selected>--There are no batches in DB-</option>');
+                    }
+                    else {
+                        for (var i = 0; i < len; i++) {
+                            if (!(btch == response[i].Batch_Id))
+                                $("#Batch_Id").append(new Option(response[i].Batch_Id, response[i].Batch_Id));
+                        }
+                    }
+                },
+                error: function (response) {
+                    $("#Batch_Id").html('<option disabled selected>--There are no batches in DB--</option>');
+                }
+            });
+
+            $.ajax({
+                type: "POST",
+                url: "/SuperUser/AjaxMethodForSection",
+                contentType: "application/json; charset=utf-8",
+                dataType: "json",
+                success: function (response) {
+                    for (var i in response) {
+                        if (!(sec == response[i]))
+                            $("#Section").append(new Option(response[i], response[i]));
+                    }
+                },
+            
+                error: function (response) {
+                },
+            });
+
+        });
+
+    });
+</script>
 
 
 
